# ChatGPT_CLI

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: apikeycheck.cpp  apikeycheck.hpp  chatgptapi.cpp  chatgptapi.hpp  chathistory.cpp  chathistory.hpp  command.cpp  command.hpp  commandcontext.cpp  commandcontext.hpp  filereadwrite.cpp  filereadwrite.hpp  formatting.cpp  formatting.hpp  main.cpp  request.cpp  request.hpp
tests/: test_chatgptapi.cpp  test_chathistory.cpp  test_commandcontext.cpp  test_filereadwrite.cpp
